--- a/src/components/HeaderComponent/headerComponent.module.scss
+++ b/src/components/HeaderComponent/headerComponent.module.scss
@@ -23,7 +23,10 @@
    display: flex;
    gap: 10px;
 }
-
+.user {
+   display: flex;
+   gap: 5px;
+}
 .header_container {
    display: flex;
    justify-content: space-between;
@@ -53,14 +56,35 @@
    }
 }
 
-.search_btn {
-}
-.logo {
-   fill: #fff;
-   width: 162px;
-   height: 50px;
-   cursor: pointer;
-}
 .cart {
    padding: 0 50px;
+}
+.userNotLogin {
+   display: flex;
+   gap: 10px;
+}
+.userLogin {
+   display: flex;
+   gap: 5px;
+   cursor: pointer;
+}
+.wrapUserIcon {
+   width: 18px;
+   height: 18px;
+   position: relative;
+   background-color: #f5f5f5;
+   border-radius: 50%;
+   overflow: hidden;
+}
+.popup {
+   border-radius: 3px;
+   p {
+      padding: 5px;
+      margin: 0;
+      cursor: pointer;
+      &:hover {
+         background-color: #f5f5f5;
+         color: aquamarine;
+      }
+   }
 }
